--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
       <h3>website T-Rex 
    
-      <button class="btph"><a href="#bot">Open bot</a></button>
+      <button class="btph"><a href="https://t.me/TREXCOIN1_bot">Open bot</a></button>
       <button class="btph"><a href="#skills">Currency</a></button>
     </div>
     <div class="right">
