--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
     </div>
   </section>
   <script src="script.js"></script>
+  <script src="sw.js"></script>
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https: // unpkg .com / ionicons @ 5.5.2 / dist / ionicons / ionicons.js"></script>
   <script>
